portfolio/src/app/contact/contact.component.scss
.contact {
  padding-block: 30px;
  display: flex;
  flex-direction: column;

  @media screen and (min-width: 1024px) {
    display: flex;
    padding-block: 30px;
    flex-direction: row;
  }

  .form {
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: auto;

    @media screen and (min-width: 1024px) {
      width: 50%;
    }

    .c-title {
      font-weight: 800;
      font-size: 30px;
      text-align: center;
    }

    .input-group {
      display: flex;
      gap: 10px;
      align-items: center;

      span {
        color: var(--accent-color);
        font-weight: 800;
        min-width: 80px;
        text-align: end;
      }

      button {
        width: 100%;
      }
    }
  }

  .ill {
    display: none;

    @media screen and (min-width: 1024px) {
      display: flex;
      width: auto;
      justify-content: center;
    }
    
    .img-holder {
      img {
        height: 440px;
      }
    }
  }
}

